Sport-Freitext pro Tag ergänzen